fixed overflow in options

--- a/source/containers/Options/Options.less
+++ b/source/containers/Options/Options.less
@@ -2,5 +2,5 @@
     padding: 10px;
     width: 100%;
     max-width: 400px;
-    overlflow: hidden;
+    overflow: hidden;
 }
